@@ -21,15 +21,19 @@
  */
 
 #include <stdio.h>
+#include <stdlib.h>
+#include <errno.h>
+#include <unistd.h>
+#include <string.h>
 #include <dirent.h>
 #include <fcntl.h>
 #include <sys/ioctl.h>
 #include <linux/firewire-cdev.h>
 #include <inttypes.h>
+#include <arpa/inet.h>
 
 #include "config.h"
 #include "platform.h"
-#include <dc1394/dc1394.h>
 #include "internal.h"
 #include "juju.h"
 
