@@ -28,7 +28,6 @@
 #include "internal.h"
 #include "register.h"
 #include "offsets.h"
-#include <dc1394/dc1394.h>
 
 struct _platform_t {
     int dummy;
