@@ -20,7 +20,6 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-#include <dc1394/dc1394.h>
 #include "internal.h"
 
 const char *dc1394_feature_desc[DC1394_FEATURE_NUM] = {
