@@ -22,6 +22,9 @@
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
+#include <unistd.h>
+#include <stdlib.h>
+#include <string.h>
 #include "vendor/avt.h"
 
 /********************************************************/
