@@ -439,7 +439,7 @@ int dc_init()
     }
     dc1394_camera_free_list (list);
 
-    printf("Using camera with GUID %llx\n", camera->guid);
+    printf("Using camera with GUID %"PRIx64"\n", camera->guid);
 
     dc1394_camera_print_info(camera, stdout);
 
