@@ -194,7 +194,7 @@ int main(int argc, char *argv[])
     }
     dc1394_camera_free_list (list);
 
-    printf("Using camera with GUID %llx\n", camera->guid);
+    printf("Using camera with GUID %"PRIx64"\n", camera->guid);
 
     dc1394video_modes_t modes;
 
