@@ -62,12 +62,13 @@ int main(int argc, char *argv[])
 
     camera = dc1394_camera_new (d, list->ids[0].guid);
     if (!camera) {
-        dc1394_log_error("Failed to initialize camera with guid %llx", list->ids[0].guid);
+        dc1394_log_error("Failed to initialize camera with guid %"PRIx64,
+                list->ids[0].guid);
         return 1;
     }
     dc1394_camera_free_list (list);
 
-    printf("Using camera with GUID %llx\n", camera->guid);
+    printf("Using camera with GUID %"PRIx64"\n", camera->guid);
 
     /*-----------------------------------------------------------------------
      *  setup capture for format 7
@@ -89,8 +90,9 @@ int main(int argc, char *argv[])
      *  print allowed and used packet size
      *-----------------------------------------------------------------------*/
     err=dc1394_format7_get_packet_parameters(camera, DC1394_VIDEO_MODE_FORMAT7_0, &min_bytes, &max_bytes);
+
     DC1394_ERR_RTN(err,"Packet para inq error");
-    printf( "camera reports allowed packet size from %d - %d bytes", min_bytes, max_bytes);
+    printf( "camera reports allowed packet size from %d - %d bytes\n", min_bytes, max_bytes);
 
     err=dc1394_format7_get_packet_size(camera, DC1394_VIDEO_MODE_FORMAT7_0, &actual_bytes);
     DC1394_ERR_RTN(err,"dc1394_format7_get_packet_size error");
@@ -98,7 +100,8 @@ int main(int argc, char *argv[])
 
     err=dc1394_format7_get_total_bytes(camera, DC1394_VIDEO_MODE_FORMAT7_0, &total_bytes);
     DC1394_ERR_RTN(err,"dc1394_query_format7_total_bytes error");
-    printf( "camera reports total bytes per frame = %llx bytes\n", total_bytes);
+    printf( "camera reports total bytes per frame = %"PRId64" bytes\n",
+            total_bytes);
 
     /*-----------------------------------------------------------------------
      *  have the camera start sending us data
